--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="insert_city">Masukkan id kota misal Jakarta = 1642911</string>
     <string name="search">Cari</string>
     <string name="id_jakarta_bandung_semarang">1642911,1650357,1627896</string>
+    <string name="tampil_fragment_movie">Tampil Fragment Movie</string>
+    <string name="tampil_activity">Tampil Activity</string>
 </resources>
